@@ -2,7 +2,7 @@
 {% set title = _('Global Module Index') %}
 {% block extrahead %}
 {{ super() }}
-{% if builder != 'htmlhelp' and collapse_modindex %}
+{% if not embedded and collapse_modindex %}
     <script type="text/javascript">
       DOCUMENTATION_OPTIONS.COLLAPSE_MODINDEX = true;
     </script>
